# uipath-hackathon-gamma

./: .env.example  .gitignore  Book1.xlsx  Databricks_Financial_Data.xlsx  README.md  TICKER_DATA.txt  browser_use_client.py  certs  design_description.md  mcp_test_server.py  pyproject.toml  run.sh  server.py
Gamma/: manifest.xml  package-lock.json  package.json  webpack.config.js
Gamma/src/taskpane/: index.tsx
Gamma/src/taskpane/components/: App.tsx
Gamma/src/utils/: excelTools.ts
agent_browser_use/: main.py  pyproject.toml  result.txt
browser_use_impl/: CrawlInternet.py  models.py  test.ipynb
data/: Alphabet_structured_output.json  Bending Spoons_structured_output.json  Microsoft_structured_output.json  OpenAI_structured_output.json  Tesla_structured_output.json
data_extractor/: .env.example  main.py  pyproject.toml  result.txt  structured_output.json
data_extractor/browser_use_impl/: CrawlInternet.py  models.py
data_extractor/data/: Bending Spoons_structured_output.pkl  Databricks_structured_output.pkl  FlowTraders_structured_output.pkl  Lakera_structured_output.pkl  Veridion_structured_output.pkl
data_extractor/finviz/: entity_extractor.py  financial_data.py  test_extraction.py
documents/: README.md  fetch_filings.py
documents/AAPL/: 10-K-2025-10-31.txt  10-Q-2025-08-01.txt
documents/AMZN/: 10-K-2025-02-07.txt  10-Q-2025-10-31.txt
documents/GOOGL/: 10-K-2025-02-05.txt  10-Q-2025-10-30.txt
documents/MSFT/: 10-K-2025-07-30.txt  10-Q-2025-10-29.txt
documents/NVDA/: 10-K-2025-02-26.txt  10-Q-2025-11-19.txt
excel-mcp-server/: TOOLS.md
excel-mcp-server/examples/: run_crawl_dryrun.py  run_crawl_example.py
excel-mcp-server/src/excel_mcp/: browser_use_client.py  news.py  server.py
excel-mcp-server/src/excel_mcp/browser_use_impl/: CrawlInternet.py  models.py
rag_module/: README.md  cli.py  config.py  mcp_tool.py  pipeline.py
rag_module/SymSAG-HF/: Plan.md  README.md  pyproject.toml  requirements.txt
rag_module/SymSAG-HF/docs/: architecture.md
rag_module/SymSAG-HF/notebooks/: inference_demo.ipynb
rag_module/SymSAG-HF/scripts/: eval_qa.py  eval_sts.py  train.py
rag_module/SymSAG-HF/symsag_hf/: __init__.py  config.py  data.py  embeddings.py  graph.py  model.py  perplexity.py  rag.py  trainer.py  walks.py
rag_module/SymSAG-HF/tests/: test_config.py  test_graph.py  test_model.py
rag_module/index/: .gitkeep
